# clearml-test

./: .gitignore  ENHANCED_TRAINING_README.md  config_examples.py  hyperparameter_optimization.py  main.py  pyproject.toml  requirements.txt  train.py  train_local_arti.py  train_local_arti_gimini.py  train_local_sonnet.py  training_config.yaml
