
[project]
name = "pclearml-test"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
	"clearml>=2.0.2",
	"clearml-agent>=2.0.1",
	"glob2>=0.7",
	"matplotlib>=3.10.3",
	"numpy>=2.3.1",
	"opencv-python>=4.11.0.86",
	"pandas>=2.3.1",
	"pillow>=11.3.0",
	"psutil<5.10.0",
	"pyyaml>=6.0.2",
	"scikit-learn>=1.7.1",
	"scipy>=1.16.0",
	"seaborn>=0.13.2",
	"tensorboard>=2.20.0",
	"torch>=2.7.0",
	"torchvision>=0.22.0",
	"tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
	{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
	{ index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
	{ index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
	{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
	{ index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
	{ index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
